--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -18,7 +18,7 @@
       <div style="margin-top: 10px;">
         <label>近</label>
         <input type="number" style="width: 60px;height: 20px;" class="RecentTime" step="5">
-        <label>分钟数据</label>
+        <label>分钟</label>
       </div>
       <button class="btn btn-primary RecentTimeBtn" style="width: 60px;">Search</button>
     </div>
@@ -99,7 +99,7 @@
     var productLine = $('#vehicle-select').val();
     var datatype = 100;
     var now = new Date();
-    var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+    var end_time = now.format("yyyy-MM-dd hh:mm:ss");
     var start_time = startRecentTime();
     loadChartData(productLine, datatype, start_time, end_time);
   }
@@ -182,7 +182,7 @@
       });
 
       var now = new Date();
-      var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+      var end_time = now.format("yyyy-MM-dd hh:mm:ss");
       var start_time = startRecentTime();
 
       loadChartData(productLine, datatype, start_time, end_time);
@@ -191,7 +191,7 @@
       var datatype = 100;
 
       var now = new Date();
-      var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+      var end_time = now.format("yyyy-MM-dd hh:mm:ss");
       var start_time = startRecentTime();
 
       loadChartData(productLine, datatype, start_time, end_time);
@@ -203,7 +203,7 @@
     localStorage.box_msg = "Line_" + productLine + "_interval_100" + "_box_0";
 
     var now = new Date();
-    var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+    var end_time = now.format("yyyy-MM-dd hh:mm:ss");
     var start_time = startRecentTime();
     loadChartData(productLine, 100, start_time, end_time);
   });
@@ -228,7 +228,7 @@
       });
 
       var now = new Date();
-      var end_time = now.getFullYear() + "-" + checkTime(now.getMonth() + 1) + "-" + checkTime(now.getDate()) + ' ' + checkTime(now.getHours()) + ':' + checkTime(now.getMinutes()) + ':' + checkTime(now.getSeconds());
+      var end_time = now.format("yyyy-MM-dd hh:mm:ss");
       var start_time = startRecentTime();
       loadChartData(IntervalProductLine, IntervalDataType, start_time, end_time);
     }
@@ -250,7 +250,6 @@
     /*ajax request*/
     GetDataFun(productLine, chartdatatype, start_time, end_time);
   }
-
 
   function GetDataFun(productLine, chartdatatype, start_time, end_time) {
     if (productLine == null || chartdatatype == null || start_time == null || end_time == null) return;
