--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -30,11 +30,11 @@
       <li><a menu="moving_time" href="#moving_time"><i class="icon-time mark"></i>
         MovingTime Detail<i class="icon-chevron-right indicate"></i></a></li>
 
-      <li><a menu="moving_cycle" href="#moving_cycle"><i class="icon-bar-chart mark"></i>
+      <li><a menu="moving_cycle" href="#moving_cycle"><i class="glyphicon glyphicon-stats mark"></i>
         Moving And Cycle Time<i class="icon-chevron-right indicate"></i></a></li>
 
-      <li><a menu="tv_cycle_time" href="#tv_cycle_time"><i class="icon-lock mark"></i>
-        TV CycleTime<i class="icon-chevron-right indicate"></i></a></li>
+      <li><a menu="tv_cycle_time" href="#tv_cycle_time"><i class="glyphicon glyphicon-fullscreen mark"></i>
+        TV Play<i class="icon-chevron-right indicate"></i></a></li>
       <!--<li><a menu="defects" href="#defects"><i class="icon-list mark"></i>
         History<i class="icon-chevron-right indicate"></i></a></li>-->
 
