--- a/app/views/reports/_moving-time.html.erb
+++ b/app/views/reports/_moving-time.html.erb
@@ -282,10 +282,10 @@
         $('<th>Station</th>').appendTo('.thead-tr').ready(function () {
         });
 
-        $('<td>CycleTime</td>').appendTo('.tbody-target-max').ready(function () {
+        $('<td>Target Max</td>').appendTo('.tbody-target-max').ready(function () {
         });
 
-        $('<td>Target Max</td>').appendTo('.tbody-value').ready(function () {
+        $('<td>CycleTime</td>').appendTo('.tbody-value').ready(function () {
         });
 
         /*table*/
