--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -33,6 +33,9 @@
       <li><a menu="moving_cycle" href="#moving_cycle"><i class="glyphicon glyphicon-stats mark"></i>
         Moving And Cycle Time<i class="icon-chevron-right indicate"></i></a></li>
 
+      <li><a menu="scram_time" href="#scram_time"><i class="glyphicon glyphicon-warning-sign mark"></i>
+        Scram Time<i class="icon-chevron-right indicate"></i></a></li>
+
       <li><a menu="tv_cycle_time" href="#tv_cycle_time"><i class="glyphicon glyphicon-fullscreen mark"></i>
         TV Play<i class="icon-chevron-right indicate"></i></a></li>
       <!--<li><a menu="defects" href="#defects"><i class="icon-list mark"></i>
