--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -100,6 +100,7 @@
     var now = new Date();
     var end_time = now.format("yyyy-MM-dd hh:mm:ss");
     var start_time = startRecentTime();
+    localStorage.recent_time = $('.RecentTime').val();
     loadData(productLine, datatype, start_time, end_time);
   }
 
