--- a/app/views/reports/_moving-time.html.erb
+++ b/app/views/reports/_moving-time.html.erb
@@ -376,7 +376,7 @@
               data: charts_value,
               color: 'limegreen'
             }, {
-              name: 'cycle-time',
+              name: 'TargetMax',
               data: charts_target_max,
               color: '#FF7F00'
             }
